# ChatApp

./: CMakeLists.txt  main.cpp
common/: Observer.h  RetryOperation.h  Singleton.h  TryCatch.h  typedef.h
controller/: Controller.cpp  Controller.h
core/: Client.cpp  Client.h  NetworkManager.cpp  NetworkManager.h  Server.cpp  Server.h
model/: ChatModel.cpp  ChatModel.h
services/: NetworkService.cpp  NetworkService.h
ui/: CLI.cpp  CLI.h  UI.h
utils/: AgrsParser.cpp  Logger.cpp  Logger.h  Utils.h
utils/ArgsParser/: AgrsParser.cpp  ArgsParser.h
view/: CLIChatView.cpp  CLIChatView.h  IChatView.h
viewmodel/: ChatViewModel.cpp  ChatViewModel.h
views/: ChatView.cpp  ChatView.h  IView.h
